No Card - Bug. Fix layout on mobile to href

--- a/themes/main/src/sass/_opinion/other-opinions.scss
+++ b/themes/main/src/sass/_opinion/other-opinions.scss
@@ -39,8 +39,15 @@
         float: left;
         padding-left: 5%;
         padding-right: 5%;
-        margin: 10px 0;
+        margin: 10px 0 0 0;
         width: 55%;
+
+        & + .lead-link {
+          margin-top: 0;
+          margin-bottom: 10px;
+        }
+
+
         .name {
           color: $bdf-red;
         }
